# ShojiWM

./: Cargo.toml  LICENSE  README.md  flake.nix  hotreload.sh
.github/workflows/: docs.yml
docs/: docusaurus.config.ts  portal-install.md
docs/docs/configuration/: window-composition.md
docs/docs/getting-started/: installation.md
knowledges/: effect-invalidation.md  obs-qt-fractional-scale-subsurface.md  process-api.md  typescript-ssd-plan.md
nix/: nixos-module.nix  package.nix
src/: presentation.rs  state.rs
src/backend/: shader_effect.rs  tty.rs  window.rs
src/shojiwm/: Cargo.toml
src/shojiwm/src/: config.rs  config_error.rs  foreign_toplevel.rs  input.rs  main.rs  presentation.rs  runtime_debug.rs  runtime_input.rs  runtime_pointer.rs  runtime_process.rs  runtime_workspace.rs  state.rs  window_decoration.rs  workspace_manager.rs
src/shojiwm/src/backend/: clipped_memory.rs  clipped_surface.rs  decoration.rs  image_copy_capture_render.rs  mod.rs  rounded_rect.frag  screencopy_render.rs  shader_effect.rs  text.rs  tty.rs  window.rs  winit.rs
src/shojiwm/src/grabs/: move_grab.rs  resize_grab.rs
src/shojiwm/src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
src/shojiwm_ipc/: Cargo.toml
src/shojiwm_protocol/: Cargo.toml
src/ssd/: bridge.rs  evaluator.rs  integration.rs  mod.rs
src/xdg-desktop-portal-shojiwm/: Cargo.toml
src/xdg-desktop-portal-shojiwm/src/: main.rs  outputs.rs  picker.rs  pipewire_stream.rs  screencast.rs  screencopy_client.rs  sources.rs  toplevel_stream.rs
tools/: decoration-runtime.ts  evaluate-decoration.ts
(+11 files in other folders)
